--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,8 @@
 
             <div class="col-sm">
                 <button id="add-btn" class="btn btn-success">Add</button>
-
                 <button id="subtract-btn" class="btn btn-danger">Subtract</button>
-
+                <button id="multiply-btn" class="btn btn-secondary">Multiply</button>
                 <button id="reset-btn" class="btn btn-warning">Reset</button>
             </div>
         </div>
